app/javascript/stylesheets/application.scss
// App
@import "products";
@import "orders";
@import "about";
@import "dashboard";
@import "cart";

// Variables
@import "variables";

// Vendor CSS
@import "~@fortawesome/fontawesome-free/scss/fontawesome";
// @import "~bootstrap/scss/bootstrap.scss";
@import "normalize"; // Couldn't get this to load from node-modules, so it was copied over

// Global
body {
  background-color: $brand-blue;
  color: white;
  text-align: center;

  a {
    color: inherit;
  }
}


// Top Nav
nav {
  display: flex;
  position: absolute;
  left: 0px;
  top: 0px;
  width: 100%;
  background-color: $brand-blue;
  color: white;
  opacity: 0.7;
  justify-content: space-around;
  align-items: center;

  span {
    width: 50%;
  }

  > a {
    margin: 1rem;
    color: inherit;
  }
}

// For About Page
div.placeholder {
  height: 80px;
}

// Background image
div.title-image {
  width: 100%;
  height: 80vh;
  background-size: cover;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  > * {
    color: white;
  }

  h1 {
    font-size: 5rem;
  }
}

// Menu
div.menu-section {
  display: flex;
  flex-direction: row;

  h1 {
    text-align: center;
  }


// Categories Sidebar

  .categories {
    width: 25%;
    background-color: $brand-red;

    ul {
      padding-left: 0;

      li {
        display: flex;
        justify-content: center;
        align-items: center;
        height: 4rem;
        font-size: 2rem;

        &.highlight {
          background-color: $brand-blue;
        }
      }
    }
  }

  .menu {
    width: 75%;
  }
}


// See products.scss for everything in "div.products"

// Bootstrap adjustments
form.button_to {
  display: inline;
}

// Table format
table {
  border-collapse: collapse;
  margin: auto;

  td,
  th {
    border: 2px solid black;
    padding: 10px;
  }
}

// Payment

.pay-button {
  background-color: green;
  color: white;
  font-size: 1.5rem;
  padding: 0.5rem;
  margin: 0.5rem;
  text-decoration: none;
}

footer {
  text-align: center;
}

// To leave space around buttons and links at bottom of a page
div.bottom-link {
  padding: 2rem;
}

